--- a/Website/departments/missions.html
+++ b/Website/departments/missions.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Online Giving</title>
+  <title>Missions Team</title>
 </head>
 <body>
   
