Change Log -Format and Order 3
Continuing to format and order everything for future usage.

Temporary Header and Footer template waiting approval

--- a/Website/index.html
+++ b/Website/index.html
@@ -48,14 +48,14 @@
         </div>
       </div>
       <div class="f-right">Contact
-        <div>
-          <p>PhoneNumber 123</p>
-          <p>Email</p>
-          <p>Facebook</p>
-          <p>Instagram</p>
-          <p>Youtube</p>
-          <p>123</p>
-        </div>
+        <ul>
+          <li>PhoneNumber 123</li>
+          <li>Email</li>
+          <li>Facebook</li>
+          <li>Instagram</li>
+          <li>Youtube</li>
+          <p>123</li>
+        </ul>
       </div>
     </footer>
   </body>
