Change Log -Admin Portal header

--- a/Website/index.html
+++ b/Website/index.html
@@ -50,7 +50,7 @@
       <div class="f-right">Contact
         <ul>
           <li>PhoneNumber 123</li>
-          <li>Email</li>
+          <li>Emails</li>
           <li>Facebook</li>
           <li>Instagram</li>
           <li>Youtube</li>
