Change Log -Continuity
1. Created a script that loads the head and footer inside each webpage for us without the need to write it in all of them.

--- a/Website/departments/missions.html
+++ b/Website/departments/missions.html
@@ -6,6 +6,19 @@
   <title>Missions Team</title>
 </head>
 <body>
+  <header>
+    <div id="header"></div>
+  </header>
+
+  <main>
+
+  </main>
+  
+  <footer>
+    <div id="footer"></div>
+  </footer>
+  <script src="/scripts/include.js">
+  </script>
   
 </body>
 </html>
