--- a/Website/index.html
+++ b/Website/index.html
@@ -5,58 +5,21 @@
     <title>GTC Homepage</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
   </head>
 
-  <body>  
-    <header> 
-      <!--For this I wanna try something I seen for Brooklyn Tabernacle, The entire church name is on the top bar but when you scroll down it abbreviates it so we'll have the full organization name and when we scroll it abbreviated to just GTC Inc or something like that-->
-       <div class="banner">
-          <div class="h-left">
-            <img style="
-              width:128px;
-              height:128px;"
-            src="gtc-logo.jpg">
-            <p class="hlci">
-            <span>TheGospel Tabernacle Church Apostolic Inc
-            </p>
-          </div>
-          <div class="h-middle">Navigation Bar</div>
-          <div class="h-right">Search</div>
-        </div>  
-        <nav>
-          <!--This will be the actual navigation bar for now i'll code it in but for the actual multi-page website were just going to make buttons/assets through FIGMA-->
-          <div>Home</div>
-          <div>Departments</div>
-          <div>Churches</div>
-          <div>BLANK_404</div>
-          <div>BLANK_404</div>
-        </nav>
+  <body> 
+    <header>
+      <div id="header"></div>
     </header>
-
-    </nav>
 
     <main>
 
     </main>
-
+    
     <footer>
-      <div class="f-left">Service Times</div>
-      <div class="f-middle">Address
-        <div>
-          <p>2314 Snyder Avenue Brooklyn NY 11233</p>
-        </div>
-      </div>
-      <div class="f-right">Contact
-        <ul>
-          <li>PhoneNumber 123</li>
-          <li>Email</li>
-          <li>Facebook</li>
-          <li>Instagram</li>
-          <li>Youtube</li>
-          <p>123</li>
-        </ul>
-      </div>
+      <div id="footer"></div>
     </footer>
+    <script src="/scripts/include.js">
+    </script>
   </body>
 </html>
