Change Log -Fix
1. Adding some changes to my head and footer file,

2. Fixed file path

--- a/Website/testing/navbar.html
+++ b/Website/testing/navbar.html
@@ -120,8 +120,8 @@
             <!-- Right Side -->
             <li class="nav-group">
                 <div class="nav-item"><a href="/">Events</a></div>
-                <div class="nav-item"><a href="/">New Here?</a></div>
-                <div class="nav-item"><a href="/Website/contact-us.html">Contact Us</a></div>
+                <div class="nav-item"><a href="">New Here?</a></div>
+                <div class="nav-item"><a href="../contact-us.html">Contact Us</a></div>
             </li>
 
             <!-- Hamburger Menu -->
