--- a/Website/index.html
+++ b/Website/index.html
@@ -20,7 +20,7 @@
     <footer>
       <div id="footer"></div>
     </footer>
-    <script src="/scripts/include.js">
+    <script src="../scripts/include.js">
     </script>
   </body>
 </html>
