--- a/Website/online-giving.html
+++ b/Website/online-giving.html
@@ -17,7 +17,7 @@
   <footer>
     <div id="footer"></div>
   </footer>
-  <script src="/scripts/include.js">
+  <script src="scripts/include.js">
   </script>
   
 </body>
