Fixed the controls on the mp4 event flyer video
Fixed controls, and some path

--- a/Website/testing/test-caldender.html
+++ b/Website/testing/test-caldender.html
@@ -95,13 +95,6 @@
             object-fit: contain; 
         }
 
-        /* Hide video controls */
-        .event-flyer video::-webkit-media-controls-panel,
-        .event-flyer video::-webkit-media-controls-play-button,
-        .event-flyer video::-webkit-media-controls-timeline {
-            display: none !important;
-        }
-
         /* Time Details */
         .event-details {
             margin: 12px 0;
@@ -155,7 +148,7 @@
                 <div>Sun: 11:30 AM & 6:00 PM</div>
             </div>
             <div class="media-container">
-                <video src="../assets-and-images/youth-revival.mp4" controls></video>
+                <video src="../assets-and-images/youth-revival.mp4"></video>
             </div>
         </div>
     </button>
