--- a/Website/testing/test-leadership.html
+++ b/Website/testing/test-leadership.html
@@ -68,56 +68,99 @@
 </head>
 <body>
 
+
+    <!-- Deacons -->
     <div class="leaders-title">Deacons</div>
 
     <div class="leaders-container">
         <!-- Leader Cards -->
         <div class="leader-card">
-            <img src="/assets-and-images/pfp.jpeg" alt="Leader 1">
+            <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
             <div class="leader-name">Bannister McKenzie</div>
           </div>
         <div class="leader-card">
-          <img src="/assets-and-images/pfp.jpeg" alt="Leader 1">
+          <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
           <div class="leader-name">Alphy Beckford</div>
         </div>
         <div class="leader-card">
-          <img src="/assets-and-images/pfp.jpeg" alt="Leader 1">
+          <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
           <div class="leader-name">Franklin Rose</div>
         </div>
         <div class="leader-card">
-      <img src="/assets-and-images/pfp.jpeg" alt="Leader 1">
+      <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
       <div class="leader-name">Herbert Riley</div>
         </div>
       </div>
 
-
+    <!-- Evangelists -->
     <div class="leaders-title">Evangelists</div>
 
     <div class="leaders-container">
         <div class="leader-card">
-            <img src="/assets-and-images/pfp.jpeg" alt="Leader 1">
+            <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
             <div class="leader-name">Karlene Clarke</div>
           </div>
           <div class="leader-card">
-            <img src="/assets-and-images/pfp.jpeg" alt="Leader 1">
-            <div class="leader-name">Karlene Clarke</div>
+            <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+            <div class="leader-name">Asha Grant</div>
           </div>
           <div class="leader-card">
-            <img src="/assets-and-images/pfp.jpeg" alt="Leader 1">
-            <div class="leader-name">Karlene Clarke</div>
+            <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+            <div class="leader-name">Violet Cohen</div>
           </div>
           <div class="leader-card">
-            <img src="/assets-and-images/pfp.jpeg" alt="Leader 1">
-            <div class="leader-name">Karlene Clarke</div>
+            <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+            <div class="leader-name">Naina Dunkley</div>
           </div>
           <div class="leader-card">
-            <img src="/assets-and-images/pfp.jpeg" alt="Leader 1">
-            <div class="leader-name">Karlene Clarke</div>
+            <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+            <div class="leader-name">Sherlene Gayle</div>
           </div>
           <div class="leader-card">
-            <img src="/assets-and-images/pfp.jpeg" alt="Leader 1">
-            <div class="leader-name">Karlene Clarke</div>
+            <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+            <div class="leader-name">Dorraine Watson</div>
           </div>
     </div>
+
+
+    <!-- Ministers -->
+    <div class="leaders-title">Ministers</div>
+
+    <div class="leaders-container">
+      <div class="leader-card">
+          <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+          <div class="leader-name">Stacy-Ann Chambers</div>
+        </div>
+        <div class="leader-card">
+          <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+          <div class="leader-name">Keneisha Harrison</div>
+        </div>
+        <div class="leader-card">
+          <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+          <div class="leader-name">Doneila Sinclair</div>
+        </div>
+  </div>
+
+    <!-- Missionary -->
+    <div class="leaders-title">Missionary</div>
+
+    <div class="leaders-container">
+      <div class="leader-card">
+          <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+          <div class="leader-name">Pauline Green</div>
+        </div>
+        <div class="leader-card">
+          <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+          <div class="leader-name">Judy-Ann Brown</div>
+        </div>
+        <div class="leader-card">
+          <img src="../assets-and-images/pfp.jpeg" alt="Leader 1">
+          <div class="leader-name">Chaniel Thomas</div>
+        </div>
+  </div>
+
+
+
+
 </body>
 </html>
