Website Deployment Stage 1
1. I'll be putting up the website for testing purposes, it will be redirected back to our Facebook page.

2. Making the Header link to the other website pages

Co-Authored-By: GTCHQDevs <203009018+GTCHQDevs@users.noreply.github.com>

--- a/Website/new-here.html
+++ b/Website/new-here.html
@@ -3,20 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Developer Page</title>
+  <title>New Here</title>
 </head>
 <body>
- 
-
-  <main>
-
-  </main>
-  
- 
-  <div id="footer"></div>
-  
-  <script src="../scripts/include.js">
-  </script>
   
 </body>
 </html>
