Change Log: Fixea and Improvements
1. Improved the Header a bit

2. Changed the styling of the mobile navigation menu

3. Fixed the overflow of the footer element

4. The slideshow images need fixing, and I'll apply them soon.  They need cropping

5. Small changes to the homepage

--- a/Website/contact-us.html
+++ b/Website/contact-us.html
@@ -31,7 +31,7 @@
                 
                 <div class="info-item">
                     <strong>Email:</strong>
-                    <p>NO IDEA</p>
+                    <p>gtchq2314@gmail.com</p>
                 </div>
                 
                 <div class="info-item">
