Too tired to type just read the things

--- a/Website/about-us.html
+++ b/Website/about-us.html
@@ -6,8 +6,7 @@
   <title>About Us</title>
 </head>
 <body>
-
-    <div id="header"></div>
+  <div id="header"></div>
  
 
   <main>
@@ -15,11 +14,10 @@
   </main>
   
  
-    <div id="footer"></div>
+  <div id="footer"></div>
 
-  <script src="../scripts/include.js">
-  </script>
-   <script>
+  <script src="../scripts/include.js"></script>
+  <script>
     // Wait for the header to be loaded before initializing the menu
     document.addEventListener("headerLoaded", function () {
       console.log("Header loaded, initializing menu functionality");
