--- a/Website/index.html
+++ b/Website/index.html
@@ -3,9 +3,12 @@
 
   <head>
     <title>GTC Homepage</title>
+    <link rel="icon" type="image/x-icon" href="/assets-and-images/favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/general.css">
+    <link rel="stylesheet" href="/styles/homepage.css">
+    <link rel="stylesheet" href="/styles/slideshow.css">
   </head>
 
   <body> 
@@ -16,13 +19,14 @@
           display: flex;
           text-align: center;
           font-weight: 400;
-          font-size: 80px;
+          font-size: clamp(2.5rem, 10vw, 5.2rem);
           color: #f1c404;
           letter-spacing: 12px;">Welcome</h1>
           <h5 style="font-family: poppins;
           color: #ffffff;
+          text-align: center;
           letter-spacing: 4px;
-          font-size: 24px;">To the new and improved GTC Snyder Webpage</h5>
+          font-size: clamp(1.5rem, 2vw, 3.6rem);">To the new and improved GTC Snyder Webpage</h5>
         </div>
           <!-- Slideshow container -->
         <div class="slideshow-container">
@@ -31,14 +35,46 @@
             <img class="slideimg"  src="/assets-and-images/ss-choir.jpg" style="width:100%">
           </div>
           <div class="mySlides fade">
-            <img class="slideimg"  src="/assets-and-images/street-sign.jpg" style="width:100%">
-          </div>
-          <div class="mySlides fade">
             <img class="slideimg"  src="/assets-and-images/sanctuary.jpg" style="width:100%">
           </div>
       </div>
     <main>
-      <section></section>
+      <section class="welcome-sec"
+      style="padding-top: 25px;
+      padding-bottom:25px;
+      padding-left: min(4.5em, 8%);
+      padding-right: min(4.5em, 8%);
+      height: 600px;
+      position: relative;
+      display: flex;
+      flex: row;
+      justify-content: space-around;
+      align-items: center;
+      ">
+        <div class="p-welcome"  style="display: flex;
+        padding:8px;
+        flex-direction: column;
+        flex-wrap: wrap;
+        gap: 5px;
+        text-align: center;
+        width: 400px;">
+          <h2>Gospel Tabernacle Church</h2>
+          <h4>Snyder Avenue</h4>
+          <p class="msg"  style="
+            font-size: clamp(1rem, 1vw, 2.5rem);
+            font-weight: 300;
+            font-family: poppins;
+            text-align: center;">
+        We’re so glad you’ve found your way to our new church website! GTC Snyder is a place where faith grows, lives are transformed, and community is built. Whether you're new to the area, searching for a church home, or just exploring, we welcome you with open arms.<br></br>
+      
+      Here, you'll find information about our services, ministries, and ways to connect. More than anything, we hope you’ll experience the love of Christ and the warmth of our church family.
+
+      We invite you to join us in worship and fellowship—we can’t wait to meet you!
+          </p>
+        </div>
+        <div class="welcome-pic"  style="height: 300;
+        width: 400px;"></div>
+      </section>
       <section></section>
       <section></section>
       <section></section>
