Test Log- Fonts
1 I created 15 different font tests for Pastor to see

--- a/Website/index.html
+++ b/Website/index.html
@@ -61,6 +61,7 @@
           <h2>Gospel Tabernacle Church</h2>
           <h4>Snyder Avenue</h4>
           <p class="msg"  style="
+            width: 100%;
             font-size: clamp(1rem, 1vw, 2.5rem);
             font-weight: 300;
             font-family: poppins;
