Change Log -Homepage
1. Fixed, some issues that were affecting the homepage on mobile devices

2. Added the header and footer to other webpages

--- a/Website/leadership.html
+++ b/Website/leadership.html
@@ -6,6 +6,9 @@
   <title>Leadership</title>
 </head>
 <body>
-  
+  <div id="header"></div>
+  <main></main>
+  <div id="footer"></div>
+  <script src="../scripts/include.js"></script>
 </body>
 </html>
