--- a/Website/index.html
+++ b/Website/index.html
@@ -23,10 +23,11 @@
           color: #f1c404;
           letter-spacing: 12px;">Welcome</h1>
           <h5 style="font-family: poppins;
+          z-index: 1000;
           color: #ffffff;
           text-align: center;
           letter-spacing: 4px;
-          font-size: clamp(1.5rem, 2vw, 3.6rem);">To the new and improved GTC Snyder Webpage</h5>
+          font-size: clamp(1rem, 2vw, 3.6rem);">To the new and improved GTC Snyder Webpage</h5>
         </div>
           <!-- Slideshow container -->
         <div class="slideshow-container">
@@ -42,8 +43,8 @@
       <section class="welcome-sec"
       style="padding-top: 25px;
       padding-bottom:25px;
-      padding-left: min(4.5em, 8%);
-      padding-right: min(4.5em, 8%);
+      padding-left: min(4.5em, 6%);
+      padding-right: min(4.5em, 6%);
       height: 600px;
       position: relative;
       display: flex;
@@ -52,12 +53,15 @@
       align-items: center;
       ">
         <div class="p-welcome"  style="display: flex;
-        padding:8px;
-        flex-direction: column;
-        flex-wrap: wrap;
-        gap: 5px;
-        text-align: center;
-        width: 400px;">
+          display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      width: min(100%, 400px);
+      margin: 30px auto;
+      padding: 20px;
+      border: 1px solid #ccc;">
           <h2>Gospel Tabernacle Church</h2>
           <h4>Snyder Avenue</h4>
           <p class="msg"  style="
