--- a/Website/new-here.html
+++ b/Website/new-here.html
@@ -5,7 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>New Here</title>
 </head>
+
 <body>
-  
+  <div id="header"></div>
+  <main></main>
+  <div id="footer"></div>
+  <script src="../scripts/include.js"></script>
 </body>
+
 </html>
