--- a/Website/index.html
+++ b/Website/index.html
@@ -15,23 +15,11 @@
       <div id="header"></div>
       <div class="top">
         <div class="welcome-msg">
-          <h1 style="font-family: Mr Dafoe;
-          display: flex;
-          text-align: center;
-          font-weight: 400;
-          font-size: clamp(2.5rem, 10vw, 5.2rem);
-          color: #f1c404;
-          letter-spacing: 12px;">Welcome</h1>
-          <h5 style="font-family: poppins;
-          z-index: 1000;
-          color: #ffffff;
-          text-align: center;
-          letter-spacing: 4px;
-          font-size: clamp(1rem, 2vw, 3.6rem);">To the new and improved GTC Snyder Webpage</h5>
+          <h1>Welcome</h1>
+          <h5>To the new and improved GTC Snyder Webpage</h5>
         </div>
           <!-- Slideshow container -->
         <div class="slideshow-container">
-
           <div class="mySlides fade">
             <img class="slideimg"  src="/assets-and-images/ss-choir.jpg" style="width:100%">
           </div>
@@ -40,28 +28,8 @@
           </div>
       </div>
     <main>
-      <section class="welcome-sec"
-      style="padding-top: 25px;
-      padding-bottom:25px;
-      padding-left: min(4.5em, 6%);
-      padding-right: min(4.5em, 6%);
-      height: 600px;
-      position: relative;
-      display: flex;
-      flex: row;
-      justify-content: space-around;
-      align-items: center;
-      ">
-        <div class="p-welcome"  style="display: flex;
-          display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      width: min(100%, 400px);
-      margin: 30px auto;
-      padding: 20px;
-      border: 1px solid #ccc;">
+      <section class="welcome-sec">
+        <div class="p-welcome">
           <h2>Gospel Tabernacle Church</h2>
           <h4>Snyder Avenue</h4>
           <p class="msg"  style="
