--- a/Website/new-here.html
+++ b/Website/new-here.html
@@ -7,10 +7,4 @@
 </head>
 
 <body>
-  <div id="header"></div>
-  <main></main>
-  <div id="footer"></div>
-  <script src="../scripts/include.js"></script>
-</body>
-
-</html>
+  <div id="header
