--- a/Website/leadership.html
+++ b/Website/leadership.html
@@ -6,4 +6,9 @@
   <title>Leadership</title>
 </head>
 <body>
-  <div id="header"
+  <div id="header"></div>
+  <main></main>
+  <div id="footer"></div>
+  <script src="../scripts/include.js"></script>
+</body>
+</html>
