--- a/Website/new-here.html
+++ b/Website/new-here.html
@@ -7,4 +7,10 @@
 </head>
 
 <body>
-  <div id="header
+  <div id="header"></div>
+  <main></main>
+  <div id="footer"></div>
+  <script src="../scripts/include.js"></script>
+</body>
+
+</html>
