Change Log -Improvements
1. Added temp-colored banners on webpages since they don't have a corresponding image or custom banner.

2 Added the logo as the tiny icon in browsers.

Co-Authored-By: GTCHQDevs <203009018+GTCHQDevs@users.noreply.github.com>

--- a/Website/contact-us.html
+++ b/Website/contact-us.html
@@ -7,11 +7,13 @@
   <title>Contact Us - Gospel Tabernacle Church</title>
   <meta name="description" content="Contact information for Gospel Tabernacle Church">
   <link rel="stylesheet" href="../styles/contact-us.css">
+  <link rel="stylesheet" href="../styles/general.css"> 
+  <link rel="icon" type="image/x-icon" href="/assets-and-images/favicon.ico">
   <script defer src="../scripts/include.js"></script>
 </head>
 <body>
   <div id="header"></div>
-
+  <div class="temp-banner"></div>
   <main>
     <div class="main-content">
         <div class="page-title">Contact Us</div>
