--- a/Website/index.html
+++ b/Website/index.html
@@ -26,6 +26,9 @@
           <div class="mySlides fade">
             <img class="slideimg"  src="/assets-and-images/sanctuary.jpg" style="width:100%">
           </div>
+          <div class="mySlides fade">
+            <img class="slideimg"  src="/assets-and-images/youth-choir.jpeg" style="width:100%">
+          </div>
       </div>
     <main>
       <section class="welcome-sec">
