--- a/Website/about-us.html
+++ b/Website/about-us.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us</title>
+  <link rel="stylesheet" href="../styles/general.css">
+  <link rel="icon" type="image/x-icon" href="/assets-and-images/favicon.ico">
 </head>
 <body>
   <div id="header"></div>
+  <div class="temp-banner"></div>
  
 
   <main>
