--- a/Website/online-giving.html
+++ b/Website/online-giving.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="/assets-and-images/favicon.ico">
   <title>Online Giving</title>
 </head>
 <body>
