--- a/Website/leadership.html
+++ b/Website/leadership.html
@@ -13,5 +13,6 @@
   <main></main>
   <div id="footer"></div>
   <script src="../scripts/include.js"></script>
+  <script src="/scripts/menu.js"></script>
 </body>
 </html>
