--- a/Website/new-here.html
+++ b/Website/new-here.html
@@ -14,6 +14,7 @@
   <main></main>
   <div id="footer"></div>
   <script src="../scripts/include.js"></script>
+  <script src="/scripts/menu.js"></script>
 </body>
 
 </html>
