--- a/Website/about-us.html
+++ b/Website/about-us.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us</title>
   <link rel="stylesheet" href="../styles/general.css">
+  <link rel="stylesheet" href="/styles/backToTop.css">
   <link rel="icon" type="image/x-icon" href="/assets-and-images/favicon.ico">
 </head>
 <body>
@@ -16,7 +17,9 @@
 
   </main>
   
- 
+  <button onclick="topFunction()" id="backToTop" title="Go to top">
+    <img class="btn-img"  src="/assets-and-images/backToTop.svg" alt="Back to Top">
+  </button>
   <div id="footer"></div>
   <script src="../scripts/include.js"></script>
   <script>
