--- a/Website/contact-us.html
+++ b/Website/contact-us.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Contact information for Gospel Tabernacle Church">
   <link rel="stylesheet" href="../styles/contact-us.css">
   <link rel="stylesheet" href="../styles/general.css"> 
+  <link rel="stylesheet" href="/styles/backToTop.css">
   <link rel="icon" type="image/x-icon" href="/assets-and-images/favicon.ico">
   <script defer src="../scripts/include.js"></script>
 </head>
@@ -98,9 +99,35 @@
           </div>
       </div>
   </main>
-
+  <button onclick="topFunction()" id="backToTop" title="Go to top">
+    <img class="btn-img"  src="/assets-and-images/backToTop.svg" alt="Back to Top">
+  </button>
   <div id="footer"></div>
   <script defer src="../scripts/contact.js"></script>
   <script src="/scripts/menu.js"></script>
+  <script>
+    let mybutton = document.getElementById("backToTop");
+
+    // When user scrolls 20px from top, button shows
+    window.onscroll = function() {scrollFunction()};
+
+
+    function scrollFunction() {
+      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        mybutton.style.display = "block";
+      } else {
+        mybutton.style.display = "none";
+      }
+    }
+    window.topFunction = function () {
+      window.scrollTo({ top: 0, behavior: "smooth" });
+    };
+
+    // Button on click, returns to top
+    function topFunction() {
+      document.body.scrollTop = 0; // For Safari
+      document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+    }
+</script>
 </body>
 </html>
