--- a/Website/new-here.html
+++ b/Website/new-here.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>New Here</title>
-  <link rel="stylesheet" href="styles/general.css">
-  <link rel="icon" type="image/x-icon" href="/assets-and-images/favicon.ico">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>New Here</title>
+    <link rel="stylesheet" href="styles/general.css">
+    <link rel="stylesheet" href="/styles/backToTop.css">
+    <link rel="icon" type="image/x-icon" href="/assets-and-images/favicon.ico">
 </head>
+    <body>
+        <div id="header"></div>
+        <div class="temp-banner"></div>
+        <main>
 
-<body>
-  <div id="header"></div>
-  <div class="temp-banner"></div>
-  <main></main>
-  <div id="footer"></div>
-  <script src="../scripts/include.js"></script>
-  <script src="/scripts/menu.js"></script>
-</body>
+        </main>
+        <button onclick="topFunction()" id="backToTop" title="Go to top">
+          <img class="btn-img"  src="/assets-and-images/backToTop.svg" alt="Back to Top">
+        </button>
+        <div id="footer"></div>
+        <script src="../scripts/include.js"></script>
+        <script src="/scripts/menu.js"></script>
+        <script>
 
+        </script>
+
+   </body>
 </html>
