Change Log -Bug Fix
1. An image wasn't loading properly on phones

--- a/Website/index.html
+++ b/Website/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="slideshow-container">
             <div class="mySlides" style="background-image: url('/assets-and-images/churchFront.jpeg');"></div>
-            <div class="mySlides" style="background-image: url('/assets-and-images/streetSign.jpg');"></div>
+            <div class="mySlides" style="background-image: url('/assets-and-images/streetSign.JPG');"></div>
             <div class="mySlides" style="background-image: url('/assets-and-images/ss-choir.jpg');"></div>
             <div class="mySlides" style="background-image: url('/assets-and-images/sanctuary.jpg');"></div>
             <div class="mySlides" style="background-image: url('/assets-and-images/youth-choir.jpeg');"></div>
