Change Log -Addition
1. Deploying the calendar to the events page

2. Made an animation for the slideshow on phones

--- a/Website/calendar.html
+++ b/Website/calendar.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Events Calendar</title>
   <link rel="stylesheet" href="/styles/general.css">
+  <link rel="stylesheet" href="/styles/calendar2.css">
   <link rel="stylesheet" href="/styles/backToTop.css">
   <link rel="icon" type="image/x-icon" href="/assets-and-images/favicon.ico">
 </head>
@@ -15,7 +16,9 @@
 
 
   <main>
-
+    <div class="calendar-container">
+      <div id="calendar"></div>
+    </div>
   </main>
   <button onclick="topFunction()" id="backToTop" title="Go to top">
     <img class="btn-img"  src="/assets-and-images/backToTop.svg" alt="Back to Top">
@@ -24,5 +27,39 @@
 
   <script src="../scripts/include.js"></script>
   <script src="/scripts/menu.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+  const calendarEl = document.getElementById('calendar');
+
+  const calendar = new FullCalendar.Calendar(calendarEl, {
+    initialView: 'dayGridMonth',
+    events: '/Data/events.json', 
+   
+      headerToolbar: {
+          left: 'prev',
+          center: 'title',
+          right: 'next'
+        }
+  });
+
+  calendar.render();
+});
+</script>
+<script>
+function loadComponent(elementId, filePath) {
+    fetch(filePath) // Get the file
+      .then(response => response.text()) // Convert response to text
+      .then(data => {
+        document.getElementById(elementId).innerHTML = data; // Insert into the page
+      })
+      .catch(error => console.log("Error loading " + filePath, error)); // Handle errors
+  }
+  // Run this when the page loads
+  window.onload = function() {
+    loadComponent("header", "../components/header.html"); // Load header
+    loadComponent("footer", "../components/footer.html"); // Load footer
+  }
+</script>
 </body>
 </html>
