--- a/Website/calendar.html
+++ b/Website/calendar.html
@@ -34,7 +34,7 @@
 
   const calendar = new FullCalendar.Calendar(calendarEl, {
     initialView: 'dayGridMonth',
-    events: '../data/events.json', 
+    events: 'Website/Data/events.json', 
    
       headerToolbar: {
           left: 'prev',
