--- a/Website/calendar.html
+++ b/Website/calendar.html
@@ -35,7 +35,7 @@
 
   const calendar = new FullCalendar.Calendar(calendarEl, {
     initialView: 'dayGridMonth',
-    events: '/Data/events.JSON', 
+    events: '/json/events.JSON', 
     eventTextColor: '#fff',
     allDayDefault: false,
     dayMaxEvents: false,
