Change Log -Additions
1. Too tired to name everything, but I changed: icons, backgrounds, and such

--- a/Website/testing/test-calendar-layout.html
+++ b/Website/testing/test-calendar-layout.html
@@ -60,7 +60,7 @@
                   <div>Sun: 11:30 AM</div>
               </div>
               <div class="media-container">
-                  <img src="../assets-and-images/fnf.jpg"></img>
+                  <img src="../assets-and-images/fnf.jpg">
               </div>
           </div>
       </button> <!-- Friends and Family Day-->
@@ -240,6 +240,7 @@
                   }
               }
           });
+          
   
           // Toggle the clicked event
           const isExpanding = !eventElement.classList.contains('expanded');
