--- a/Website/index.html
+++ b/Website/index.html
@@ -31,7 +31,7 @@
             <div class="mySlides" style="background-image: url('/assets-and-images/images/streetSign.webp');"></div>
             <div class="mySlides" style="background-image: url('/assets-and-images/ss-choir.jpg');"></div>
             <div class="mySlides" style="background-image: url('/assets-and-images/sanctuary.jpg');"></div>
-            <div class="mySlides" style="background-image: url('/assets-and-images/youth-mmchoir.jpeg');"></div>
+            <div class="mySlides" style="background-image: url('/assets-and-images/images/youth-mmchoir.webp');"></div>
       </div>
     <main>
       <section class="welcome-sec">
