change to index
trying a change to the verse again

--- a/Website/index.html
+++ b/Website/index.html
@@ -58,9 +58,10 @@
           <h1>Upcoming Events</h1>
           <div id="events-container" class="event-container"></div>
       </section>
-      <section id="verse-of-the-day"  class="verse-sec" style="letter-spacing: 5px; padding: 2rem; gap: 20px; background-image:url('/assets-and-images/images/verses-background.webp'); background-color: rgba(0, 0, 0, 0.624);">
+      <section id="verse-of-the-day"  class="verse-sec" style="letter-spacing: 5px; padding: 2rem; gap: 20px;   
+  background-image:url('/assets-and-images/images/verses-background.webp'); background-color: rgba(0, 0, 0, 0.624);">
           <h1>Verse of the Day</h1>
-          <blockquote id="verse-text" style="background: rgba(255, 255, 255, 0.25); color: #f6f6ff; letter-spacing: 5px;  font-size: clamp(1rem, 2vw, 3.6rem);  ">Loading...</blockquote>
+          <blockquote id="verse-text" style="background: #00000027; color: #f9f9f9; letter-spacing: 5px;  font-size: clamp(.8rem, 1.9vw, 3.4rem);    ">Loading...</blockquote>
           <p id="verse-reference" style="font-weight: bold; color: #ffd369; letter-spacing: 5px;  font-size: clamp(1rem, 2vw, 3.6rem);"></p>
       </section>
       <section></section>
