Fixed overlapping issue with the welcome msg

--- a/Website/index.html
+++ b/Website/index.html
@@ -22,7 +22,7 @@
           <div class="live">
             <p>WATCH US LIVE SUNDAYS: 11:30AM</p>
             <div class="live-button">
-              <a href="https://www.youtube.com/@GospelTabernacleChurchSnyder" target="_blank"><img class="scpic"  src="/assets-and-images/icons/youtube.svg"></a>
+              <a href="https://www.youtube.com/@gtchq623/live" target="_blank"><img class="scpic"  src="/assets-and-images/icons/youtube.svg"></a>
             </div>
           </div>
         </div>
@@ -35,24 +35,17 @@
       </div>
     <main>
       <section class="welcome-sec">
-          <div class="p-welcome">
-              <h2>Gospel Tabernacle Church</h2>
-              <h4>Snyder Avenue</h4>
-              <p class="msg"  style="
-                width: 100%;
-                font-size: clamp(1rem, 1vw, 2.5rem);
-                font-weight: 300;
-                font-family: poppins;
-                text-align: center;">
-                We’re so glad you’ve found your way to our new church website! GTC Snyder is a place where faith grows, lives are transformed, and community is built. Whether you're new to the area, searching for a church home, or just exploring, we welcome you with open arms.<br></br>
-              
-                Here, you'll find information about our services, ministries, and ways to connect. More than anything, we hope you’ll experience the love of Christ and the warmth of our church family.
-
-                We invite you to join us in worship and fellowship—we can’t wait to meet you!
-              </p>
-            </div>
-        <div class="welcome-pic"  style="height: 300;
-        width: 400px;"></div>
+        <div class="p-welcome">
+          <h2>Gospel Tabernacle Church</h2>
+          <h4>Snyder Avenue</h4>
+          <div class="msg-container">
+            <p class="msg">We're so glad you've found your way to our new church website! GTC Snyder is a place where faith grows, lives are transformed, and community is built. Whether you're new to the area, searching for a church home, or just exploring, we welcome you with open arms.</p>
+            <p class="msg">Here, you'll find information about our services, ministries, and ways to connect. More than anything, we hope you'll experience the love of Christ and the warmth of our church family.</p>
+            <p class="msg">We invite you to join us in worship and fellowship—we can't wait to meet you!</p>
+          </div>
+        </div>
+        <div class="welcome-pic"></div>
+      </section>
       </section>
       <section class="events-sec">
           <h1>Upcoming Events</h1>
